--- a/mnist/pipeline.ipynb
+++ b/mnist/pipeline.ipynb
@@ -94,7 +94,7 @@
     "                            framework=\"tensorflow\", version=\"1.14\",\n",
     "                            program=code_name, run_script=training_script,\n",
     "                            input_dataset_mounts='[\"tmp/data/\"]',outputs='[\"sdk-pallavi\"]',\n",
-    "                            output_mounts='[\"mnist/\"]')\n",
+    "                            output_mounts='[\"model/\"]')\n",
     "                   \n",
     "                   serving  = dkube_serving_op(token, training.outputs['artifact'],\n",
     "                            device=\"cpu\", serving_image=json.dumps({\"image\": \"ocdr/tensorflowserver:1.14\"}),\n",
