--- a/mnist/pipeline.ipynb
+++ b/mnist/pipeline.ipynb
@@ -47,9 +47,9 @@
    "source": [
     "user = os.getenv('USERNAME')\n",
     "token = os.getenv('DKUBE_USER_ACCESS_TOKEN')\n",
-    "code_name = \"sdk-pallavi\"\n",
-    "dataset_name = \"sdk-test-pallavi\"\n",
-    "model_name = \"sdk-pallavi\"\n",
+    "code_name = \"sdk-mnist\"\n",
+    "dataset_name = \"sdk-mnist\"\n",
+    "model_name = \"sdk-mnist\"\n",
     "framework = \"tensorflow_1.14\"\n",
     "image = \"ocdr/d3-datascience-tf-cpu:v1.14-3\"\n",
     "training_script = \"python model.py\"\n",
@@ -93,7 +93,7 @@
     "                   training = dkube_training_op(token, json.dumps({\"image\": image}),\n",
     "                            framework=\"tensorflow\", version=\"1.14\",\n",
     "                            program=code_name, run_script=training_script,\n",
-    "                            input_dataset_mounts='[\"tmp/data/\"]',outputs='[\"sdk-pallavi\"]',\n",
+    "                            input_dataset_mounts='[\"tmp/data/\"]',outputs='[\"sdk-mnist\"]',\n",
     "                            output_mounts='[\"/model\"]')\n",
     "                   \n",
     "                   serving  = dkube_serving_op(token, training.outputs['artifact'],\n",
